[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/Title/TitleMenu.gd" type="Script" id=1]
[ext_resource path="res://ui/Title/title-background.png" type="Texture" id=2]
[ext_resource path="res://ui/Title/title.png" type="Texture" id=3]
[ext_resource path="res://ui/Title/play-button.png" type="Texture" id=4]
[ext_resource path="res://sound/button-hover.ogg" type="AudioStream" id=5]
[ext_resource path="res://sound/button-click.ogg" type="AudioStream" id=6]
[ext_resource path="res://sound/intro.ogg" type="AudioStream" id=7]
[ext_resource path="res://theme/Roboto-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]

size = 16
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )

[node name="TitleMenu" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="Title" type="TextureRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -150.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 4

[node name="PlayButton" type="TextureButton" parent="."]
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 334.0
margin_top = -110.0
margin_right = -334.0
margin_bottom = -40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 3

[node name="Tween" type="Tween" parent="."]
repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="FadeScreen" type="ColorRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 0 )

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="Song" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
stream_paused = false
mix_target = 0
bus = "Master"

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -254.0
margin_top = -70.0
margin_right = -15.0
margin_bottom = 15.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "By: Berny Cantos
 & Gerard Puertas
For OpenJam 2018
"
align = 2
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="mouse_entered" from="PlayButton" to="." method="_on_PlayButton_mouse_entered"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed" flags=6]
